--- a/popup.html
+++ b/popup.html
@@ -32,8 +32,10 @@
       #data {
           margin-top: 10px;
       }
-      #table_div {
+      #barchart_div {
           margin-top: 15px;
+          width:200px;
+          height:300px;
       }
       .active {
           font-weight: bold;
@@ -43,9 +45,21 @@
           color: red;
           font-weight: bold;
       }
+      #total_time {
+          font-weight: 600;
+          /*text-align: center;*/
+      }
       #nodata a {
           text-decoration: underline;
           color: red;
+      }
+      th {
+          text-align: right;
+          font-weight: bold;
+          white-space: nowrap;
+      }
+      th, td {
+          vertical-align: top;
       }
     </style>
 
@@ -75,44 +89,52 @@
     <div style="clear:both"></div>
     <div id="data">
       <span id="nodata">Start browsing to collect usage data.</span>
-      <div id="chart_div"></div>
+      <div id="total_time"></div>
       <div id="barchart_div"></div>
       <div id="table_div"></div>
       &nbsp;
-        &nbsp;  
+      &nbsp;  
     </div>
-    <div id="alarm">
 
-      <div>Netflix
+    <div id="alarm">
+      <div id="cureent_tab">You are currently on:&nbsp;</div>
+      <br />
+      <!-- <div id="setText">Set a timer for this site:&nbsp;</div> -->
+
+    <form>
+      How long to you want to stay:
+      Minutes: <input type="text" id="mns" name="mns" value="0" size="3" maxlength="3" /> &nbsp; &nbsp; Seconds: <input type="text" id="scs" name="scs" value="0" size="2" maxlength="2" /><br/>
+      
+    </form>
+
+      <div>
+      <tr>
+        <th>Input your own notification text:&nbsp;</th>
+        <td>
+          <textarea id="message">Goodbye Netflix~! Let's do some amazing work:)!</textarea>
+        </td>
+      </tr>
+      </div>
+      
+    </div>
+ 
+    <input type="button" id="start" value="Start"/>
+      Countdown Timer: &nbsp; <span id="showmns">00</span>:<span id="showscs">00</span>
+
+<!--       <div>Netflix
         &nbsp;
         &nbsp;
       <a href="" id="alarmOn">Start</a>   
-       &nbsp;
+        &nbsp;
       <a href="" id="alarmOff">Stop</a>
       </div>
-      <div id="myProgressbar" class="progress">
+      <p id="demo"></p> -->
+
+      <!-- <div id="myProgressbar" class="progress">
         <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-        <span><!-- 45% Complete --></span>
-        </div>
-      </div>
-
-      <!-- <div class="progress">
-        <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
         <span></span>
         </div>
-      </div>
+       </div> -->
 
-      <div class="progress">
-        <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-        <span></span>
-        </div>
-      </div>
-
-      <div class="progress">
-        <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-        <span></span> -->
-        </div>
-      </div>
-    </div>
   </body>
 </html>
