--- a/options.html
+++ b/options.html
@@ -1,16 +1,16 @@
 <!doctype html>
 <html>
   <head>
-    <title>Timer Options</title>
+    <title>Timile</title>
     <link rel="stylesheet" href="options.css" />
     <script src="options.js"></script>
   </head>
-  <body>
+  <body style="font-family: lato;">
     <div id="header">
-      <h1>Timer Options</h1>
+      <h1>Timile</h1>
       <div id="info">
         <span>
-          Like Timer? <!-- <a target="_blank" href="https://chrome.google.com/webstore/detail/web-timer/ggnjbdfgigejghknieofeahaknkjafim/reviews"> -->Leave a review!</a>
+          Like Timile? <!-- <a target="_blank" href="https://chrome.google.com/webstore/detail/web-timer/ggnjbdfgigejghknieofeahaknkjafim/reviews"> -->Leave a review!</a>
         </span>
         <br />
         <span>
@@ -22,14 +22,14 @@
       <table>
         <tbody>
 
-          <tr>
+          <!-- <tr>
             <th>
             Set Alarm for these Websites<br />
             (one per line)
             </th>
             <td><textarea id="tracklist">netflix.com&#13;&#10;facebook.com&#13;&#10;youtube.com</textarea></td>
             <td id="tracklist-description" class="description">Timer will set alarm for these site, when the time is up, it will give you notification.</td>
-          </tr>
+          </tr> -->
 
           <tr>
             <th>
