--- a/popup.html
+++ b/popup.html
@@ -161,7 +161,7 @@
       <tr>
         <th>Input notification text:&nbsp;&nbsp;&nbsp;</th>
         <th>
-          <textarea rows = "1" cols="45" id="message">Goodbye Netflix~! Let's do some amazing work:)!</textarea>
+          <textarea rows = "1" cols="45" id="message">Goodbye~! </textarea>
         </th>
         <th></th>
       </tr>
