--- a/options.html
+++ b/options.html
@@ -1,16 +1,16 @@
 <!doctype html>
 <html>
   <head>
-    <title>Timile</title>
+    <title>TimeSmart</title>
     <link rel="stylesheet" href="options.css" />
     <script src="options.js"></script>
   </head>
   <body style="font-family: lato;">
     <div id="header">
-      <h1>Timile</h1>
+      <h1>TimeSmart</h1>
       <div id="info">
         <span>
-          Like Timile? <!-- <a target="_blank" href="https://chrome.google.com/webstore/detail/web-timer/ggnjbdfgigejghknieofeahaknkjafim/reviews"> -->Leave a review!</a>
+          Like TimeSmart? <!-- <a target="_blank" href="https://chrome.google.com/webstore/detail/web-timer/ggnjbdfgigejghknieofeahaknkjafim/reviews"> -->Leave a review!</a>
         </span>
         <br />
         <span>
